latex author name accent
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@85412 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/AllelicImbalance.Rnw
+++ b/vignettes/AllelicImbalance.Rnw
@@ -20,7 +20,7 @@
 \begin{document}
 
 \title{AllelicImbalance}
-\author{Jesper Robert Gådin and Lasse Folkersen}
+\author{Jesper Robert G\r{a}din and Lasse Folkersen}
 
 \maketitle
 
