Commit made by the Bioconductor Git-SVN bridge. Consists of 2 commit(s).
Commit information:

    Commit id: cea8f67a3e6c69e70e786fa681815886607114c8
    Commit message:
    new faster getAlleleCounts function
    Committed by Jesper Gådin <altebladet at hotmail.com>
    Commit date: 2014-02-20T07:46:09-08:00

    Commit id: fa2907483d84a139b6c51f78b3aa25dabf3f98f4
    Commit message:
    some documentation updates
    Committed by Jesper Gådin <altebladet at hotmail.com>
    Commit date: 2014-02-20T13:43:54-08:00

From: Bioconductor Git-SVN Bridge <bioc-sync@bioconductor.org>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@86650 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/AllelicImbalance.Rnw
+++ b/vignettes/AllelicImbalance.Rnw
@@ -77,7 +77,9 @@ reads <- impBamGAL(pathToFiles,searchArea,verbose=FALSE)
 
 heterozygotePositions <- scanForHeterozygotes(reads,verbose=FALSE)
 
-countList <- getAlleleCount(reads, heterozygotePositions, verbose=FALSE)
+seqlevels(reads) <- "17" 
+
+countList <- getAlleleCounts(reads, heterozygotePositions, verbose=FALSE)
 
 a.simple <- ASEsetFromCountList(heterozygotePositions,countList)
 
@@ -108,7 +110,7 @@ that were generated with the samtools mpileup function.
 <<gettingASEsetFromBcf, eval=TRUE>>=
 BcfGR <- impBcfGR(pathToFiles,searchArea,verbose=FALSE)
 
-countListBcf <- getAlleleCount(reads, BcfGR,verbose=FALSE)
+countListBcf <- getAlleleCounts(reads, BcfGR,verbose=FALSE)
 
 a.bcf <- ASEsetFromCountList(BcfGR, countListBcf)
 @
@@ -125,8 +127,8 @@ information has strand information, then the correct procedure is as follows:
 
 
 <<creating stranded ASEset, eval=TRUE>>=
-plus <- getAlleleCount(reads, heterozygotePositions, strand="+",verbose=F) 
-minus <- getAlleleCount(reads, heterozygotePositions, strand="-",verbose=F)
+plus <- getAlleleCounts(reads, heterozygotePositions, strand="+",verbose=F) 
+minus <- getAlleleCounts(reads, heterozygotePositions, strand="-",verbose=F)
 
 a.stranded <-
 ASEsetFromCountList(
