Commit made by the Bioconductor Git-SVN bridge. Consists of 1 commit(s).
Commit information:

    Commit id: 619502b39afd11d1d12e0da9a53a3c645d863322
    Commit message:
    updated getSnpIdFromLocation
    Committed by Jesper Gådin <altebladet at hotmail.com>
    Commit date: 2014-03-04T15:57:10-08:00

From: Bioconductor Git-SVN Bridge <bioc-sync@bioconductor.org>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@87060 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,13 @@
 CHANGES IN DEVEL-BRANCH
 -----------------------
 
+NEW FEATURES
+
+    o Faster getAlleleCounts()  
+
 BUG FIXES
 
-    o Fix bug in the "realCigarPosition" function, that otherwise could generate an error. 
+    o Fixed bug in the "realCigarPosition" function, that otherwise could generate an error. 
 
 
 
