Use rowRanges in favor of deprecated rowData
Also re-oxygenize


git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@100241 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/AllelicImbalance.Rnw
+++ b/vignettes/AllelicImbalance.Rnw
@@ -159,9 +159,9 @@ searchArea<-getAreaFromGeneNames("ACTG1",org.Hs.eg.db)
 #Getting rs-IDs
 library(SNPlocs.Hsapiens.dbSNP.20120608)
 #seqlevels(a.simple) <- "chr17"
-gr <- rowData(a.simple)
+gr <- rowRanges(a.simple)
 updatedGRanges<-getSnpIdFromLocation(gr, SNPlocs.Hsapiens.dbSNP.20120608)
-rowData(a.simple)<-updatedGRanges
+rowRanges(a.simple)<-updatedGRanges
 
 @
 
